<resources>
    <string name="app_name">AppListVip</string>
    <string name="header_text">Aplicativo Lista Vip Android</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso">Nome do dev.android.rodrigues.applistvip.model.Curso</string>
    <string name="phone">Phone</string>
    <string name="button">Button</string>
    <string name="salvar">SALVAR</string>
    <string name="limpar">LIMPAR</string>
</resources>